@@ -25,24 +25,48 @@ plugins {
     id("kotlin")
 }
 
+apply from: "../buildSrc/kotlin-dsl-dependency.gradle"
+
+def buildSrcJar(jarName) {
+    return project.files(
+            new File(
+                    BuildServerConfigurationKt.getRootOutDirectory(project),
+                    "buildSrc/$jarName/build/libs/${jarName}.jar"
+            )
+    )
+}
+
 dependencies {
     implementation(gradleApi())
-    implementation(project.files(new File(BuildServerConfigurationKt.getRootOutDirectory(project), "buildSrc/private/build/libs/private.jar")))
-    implementation(project.files(new File(BuildServerConfigurationKt.getRootOutDirectory(project), "buildSrc/public/build/libs/public.jar")))
+    implementation(buildSrcJar("private"))
+    implementation(buildSrcJar("public"))
+    implementation(buildSrcJar("jetpad-integration"))
     implementation("com.googlecode.json-simple:json-simple:1.1")
     implementation(libs.gson)
     implementation(libs.dom4j) {
         // Optional dependency where Ivy fails to parse the POM file.
         exclude(group:"net.java.dev.msv", module:"xsdlib")
     }
+    // Required for dom4j to parse comments correctly.
+    implementation(libs.xerces)
 
     testImplementation(libs.junit)
     testImplementation(libs.truth)
     testImplementation(project(":internal-testutils-gradle-plugin"))
+    testImplementation(project(":internal-testutils-truth"))
     testImplementation(gradleTestKit())
+    testImplementation(libs.checkmark)
+    testImplementation(libs.kotlinGradlePluginz)
+    testImplementation(libs.toml)
+    testImplementation(findGradleKotlinDsl())
 }
 
 SdkResourceGenerator.generateForHostTest(project)
+
+tasks.withType(Test).configureEach {
+    // https://github.com/gradle/gradle/issues/22317
+    it.jvmArgs = ["--add-opens=java.base/java.lang=ALL-UNNAMED"]
+}
 
 // Also do style checking of the buildSrc project from within this project
 // We run that from this project so that it doesn't block other projects while it runs
